<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/tv_log_in_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/tv_log_in_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in_message"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_below="@+id/tv_log_in_title"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_log_in_email_edit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp"
                android:layout_below="@+id/tv_log_in_message">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_log_in_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textSize="16sp"
                        android:focusable="true"
                        android:inputType="text"
                        android:background="@null"
                        android:hint="@string/hint_email"
                        android:maxLength="25"
                        android:imeOptions="actionNext"
                        android:lines="1" />

                    <ImageView
                        android:id="@+id/iv_log_in_clear_email"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_clear"
                        android:layout_marginEnd="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:background="?selectableItemBackgroundBorderless"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_log_in_password_edit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="20dp"
                android:layout_below="@+id/cv_log_in_email_edit">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_log_in_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textSize="16sp"
                        android:focusable="true"
                        android:inputType="text"
                        android:background="@null"
                        android:hint="@string/hint_password"
                        android:maxLength="25"
                        android:imeOptions="actionDone"
                        android:lines="1" />

                    <ImageView
                        android:id="@+id/iv_log_in_clear_password"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_clear"
                        android:layout_marginEnd="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:background="?selectableItemBackgroundBorderless"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_log_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv_log_in_password_edit"
                android:text="@string/log_in"
                android:backgroundTint="@color/white"
                android:textColor="@color/colorPrimary"
                android:textAllCaps="false"
                app:cornerRadius="8dp"
                android:layout_margin="16dp"/>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>